# alx-backend-graphql_crm

./: README.md  asgi.py  pyproject.toml  requirements.txt  settings.py  urls.py  wsgi.py
alx_backend_graphql/: schema.py  seed_db.py  settings.py  urls.py
crm/: README.md  celery.py  cron.py  filters.py  models.py  schema.py  settings.py  tasks.py  tests.py
crm/cron_jobs/: clean_inactive_customers.sh  send_order_reminders.py
crm/migrations/: 0001_initial.py  0002_customer_created_at.py  0003_alter_order_total_amount.py  0004_alter_customer_created_at.py  0005_alter_order_order_date.py
graphql_crm/: schema.py
