[project]
name = "alx-backend-graphql-crm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.2",
    "django>=6.0",
    "django-celery-beat>=2.1.0",
    "django-crontab>=0.7.1",
    "django-filter>=25.2",
    "gql[all]>=4.0.0",
    "graphene-django>=3.2.3",
]
